# qr-code-generator-apifc5e8c63-623d-43d0-8e1f-c5122b2eab68

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: generate_qr_code_service.py  server.py  validate_api_key_service.py
